@@ -24,6 +24,7 @@ Ver.5.3 (in development)
 - INTER-Mediator version can be described in the 'metadata.json' file, and dist-docs/build.sh
   can update the metadata.json.
 - All header description of source files are updated, and build.sh was adapted them.
+- Update buster.js and package.json for unit testing.
 - [BUG FIX] Fix detection of params.php file.
 - [BUG FIX] Fix loading DB_TextFile class. The affected version is 5.2 only.
 
